#3 fixed not working on iphone

--- a/website/src/assets/scss/_hero.scss
+++ b/website/src/assets/scss/_hero.scss
@@ -4,7 +4,7 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/assets/img/hero-bg.png") fixed bottom center;
+  background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 
   &:before {
@@ -45,6 +45,10 @@
       letter-spacing: 1px;
       border-bottom: 3px solid $primary;
     }
+  }
+
+  @media (min-width: 1024px) {
+    background-attachment: fixed;
   }
 
   @media (max-width: 768px) {
